added variables to the main style

--- a/src/styles/sass/variables/_colors.scss
+++ b/src/styles/sass/variables/_colors.scss
@@ -4,3 +4,18 @@ $background-lighter: #324a6d;
 $dark: #333;
 $white: #ffffff;
 $items-disabled: grey;
+
+
+$text: (
+
+  "post-title": $background-lighter,
+  "post-author": $primary,
+  "post-body": $dark,
+  );
+  
+  $layout: (
+  "button-icon": $primary,
+  "button-background": $primary,
+  "post-background": $white,
+  "post-border":$background-lighter
+);
