created component PosList with styles and tested it

--- a/src/styles/sass/variables/_colors.scss
+++ b/src/styles/sass/variables/_colors.scss
@@ -1,5 +1,6 @@
 $primary: #e62b70;
 $background: #000147;
+$background-secondary:#010232;
 $background-lighter: #324a6d;
 $dark: #333;
 $white: #ffffff;
@@ -17,5 +18,6 @@ $text: (
   "button-icon": $primary,
   "button-background": $primary,
   "post-background": $white,
-  "post-border":$background-lighter
+  "post-border":$background-lighter,
+  "list-background":$background-secondary,
 );
