--- a/src/components/Post/Post.scss
+++ b/src/components/Post/Post.scss
@@ -4,8 +4,7 @@
 
 .post {
   width: 100%;
-  max-width: 324px;
-  min-width: 200px;
+  min-height: 100%;
   background: map.get(colors.$layout, "post-background");
   border-radius: 15px;
   border-style: solid;
