--- a/src/styles/sass/variables/_colors.scss
+++ b/src/styles/sass/variables/_colors.scss
@@ -21,7 +21,8 @@ $text: (
   "button-background": $primary,
   "post-background": $white,
   "post-border":$background-lighter,
-  "list-background":$background-secondary,
-  "header-background":$white,
-  "header-shadow":$background-secondary
+  "list-background":#333399,
+  "header-background":$background-secondary,
+  "header-shadow":$background-secondary,
+  "sidebar-background":$white
 );
