--- a/src/components/PostList/PostList.scss
+++ b/src/components/PostList/PostList.scss
@@ -6,9 +6,11 @@
 .posts-list{
   list-style: none;
   padding: 0;
+  margin: 0;
   display: flex;
   gap:15px;
   flex-wrap: wrap;
+  justify-content: center;
   background-color: map.get(colors.$layout,"list-background");
 
 
