--- a/src/styles/sass/variables/_fontSizes.scss
+++ b/src/styles/sass/variables/_fontSizes.scss
@@ -2,8 +2,12 @@ $fontSize:(
 "titles":1.3rem,
 "subtitles":1.1rem,
 "content":1rem,
-"action-icons":1.3rem,
+"action-icons":1.1rem,
 "header-title":2rem,
-"header-links":1.3rem
-
+"header-links":1.3rem,
+"post-detail-content":1.6rem,
+"post-detail-title":1.8rem,
+"post-detail-author":1.5rem,
+"action-icons-detail":1.5rem,
+"detail-form-label":1.2rem
 )
