created component BasePage

--- a/src/styles/sass/variables/_colors.scss
+++ b/src/styles/sass/variables/_colors.scss
@@ -23,11 +23,12 @@ $text: (
   "button-background": $primary,
   "post-background": $white,
   "post-border":$background-lighter,
-  "list-background":#333399,
+  "list-background":$background,
   "header-background":$background-secondary,
   "header-shadow":$background-secondary,
   "sidebar-background":$white,
   "post-detail-background":$background-secondary,
   "post-detail-form":$background-secondary,
+  "base-page-background":$background
   
 );
