created page NotFoundPage

--- a/src/styles/sass/variables/_colors.scss
+++ b/src/styles/sass/variables/_colors.scss
@@ -15,7 +15,8 @@ $text: (
   "header-links":$primary,
   "post-detail-title":$white,
   "post-detail-body":$white,
-  "post-detail-author":$primary
+  "post-detail-author":$primary,
+  "notfound-page-texts":$primary
   );
   
   $layout: (
