created component Login

--- a/src/styles/sass/variables/_colors.scss
+++ b/src/styles/sass/variables/_colors.scss
@@ -16,7 +16,8 @@ $text: (
   "post-detail-title":$white,
   "post-detail-body":$white,
   "post-detail-author":$primary,
-  "notfound-page-texts":$primary
+  "notfound-page-texts":$primary,
+  "login-text":$primary
   );
   
   $layout: (
